fix-x-overflow

--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -34,6 +34,7 @@ body {
   display: flex;
   flex-direction: column;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 section {
